Update README.md
Added installation instructions for JVM arguments