@@ -1,1 +1,10 @@
 # ProjectNews_G2.1
+
+
+Installation:
+
+For the program to run you might need to add following JVM arguments:
+
+--add-modules javafx.controls,javafx.fxml,javafx.media
+
+To do that, go to "Menu/Run/Edit Configurations" and add the line where it says "VM Options. CLI Arguments"
